# Django_bank

./: .gitignore  .gitmessage.txt  pyproject.toml  test.py
config/settings/: base.py
