[tool.poetry]
name = "django-bank"
version = "0.1.0"
description = ""
authors = ["Kyubin1123 <michelle010929@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
django-restframework = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
